--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,6 +1,6 @@
 .appContainer {
 	max-width: 550px;
-    width: 100%;
+	width: 100%;
 }
 .appSection {
 	display: flex;
@@ -8,4 +8,7 @@
 	justify-content: center;
 	height: 100%;
 	width: 100%;
+}
+.main {
+	padding: 35px 35px 55px 35px;
 }
